Login page modified

--- a/templates/login.html
+++ b/templates/login.html
@@ -41,7 +41,7 @@
     <body>
         <main> 
             <div class="container">
-                <form action="/login" method="POST">
+                <form action="{{url_for('login')}}" method="POST">
                 <h2 style="font-size: 40px; text-shadow: 10px 10px 20px;">Zap into the Quiz Master</h2>
                 <input type="text" name="uname" id="uname" placeholder="Enter your username" required>
                 <input type="password" name="pwd" id="pwd" placeholder="Enter password" required>
@@ -50,5 +50,10 @@
             </form>
             </div>
         </main>
+        {% if msg %}
+        <script type="text/javascript">
+            alert("{{ msg }}");
+        </script>
+        {% endif %}
     </body>
 </html>
