--- a/templates/view_quizzes.html
+++ b/templates/view_quizzes.html
@@ -53,9 +53,10 @@
             <table>
                 <tr>
                     <th>ID</th>
-                    <th>Question title</th>
-                    <th>Date if Quiz</th>
+                    <th>Quiz title</th>
+                    <th>Date of Quiz</th>
                     <th>Time Duration</th>
+                    <th>Number of Questions</th>
                     <th>Actions</th>
                 </tr>
                 {% for quiz in avail_quiz %}
@@ -64,7 +65,11 @@
                     <td>{{quiz['quiz_name']}}</td>
                     <td>{{quiz['date_of_quiz']}}</td>
                     <td>{{quiz['time_duration']}}</td>
-                    <td><a style="color: black;" href="{{ url_for('view_qsns',quiz_id=quiz['id'],chapter_id=chapter_id) }}">View</a></td>
+                    <td>{{quiz['']}}</td>
+                    <td><a style="color: black;" href="{{ url_for('view_qsns',quiz_id=quiz['id'],chapter_id=chapter_id) }}">View</a>
+                        <a style="color: black;" href="{{ url_for('edit_quiz',quiz_id=quiz['id'],chapter_id=chapter_id) }}">Edit</a>
+                    </td>
+
                     <!-- also add for delete button here -->
                     <!-- <a href="" onclick="return confirm('Are you sure?')">Delete</a> -->
                 </tr>
