--- a/templates/login.html
+++ b/templates/login.html
@@ -6,13 +6,16 @@
     <title>Login</title>
     <style>
         body{
-            display: flex;
-            justify-content: center;
-            align-items: center;
+            display:flex;
+            justify-content:center;
+            align-items:center;
             height: 100vh;
+            margin: 0;
+            background: url('/static/login_bg.jpg') no-repeat center;
+            background-size: cover;
         }
         .container{
-            background-color: aqua;
+            background-color: rgba(55, 88, 88, 0.4);
             text-align: center;
             padding: 15px;
             box-shadow: 10px 10px 20px black;
@@ -30,10 +33,20 @@
 
         input[type="submit"]{
             cursor: pointer;
-            background-color: #009900;
+            background-color: green;
             width: 100px;
+            transition: 0.2s;
         }
-        input[type="submit"]:hover{
+        #sub:disabled{
+            cursor: not-allowed;
+            background-color: gray;
+        }
+        #sub:hover{
+            transform: scale(1.1);
+            box-shadow: 0 4px 10px rgba(0,0,0,0.5);
+        }
+        #sub:active{
+            transform: scale(0.95);
             background-color: #00ff00;
         }
     </style>
@@ -45,15 +58,10 @@
                 <h2 style="font-size: 40px; text-shadow: 10px 10px 20px;">Zap into the Quiz Master</h2>
                 <input type="text" name="uname" id="uname" placeholder="Enter your username" required>
                 <input type="password" name="pwd" id="pwd" placeholder="Enter password" required>
-                <input type="submit" value="Submit">
+                <input type="submit" value="Submit" id="sub">
                 <a href="{{url_for('register')}}">New here?No worries we got more space to add you too ;)</a>
             </form>
             </div>
         </main>
-        {% if msg %}
-        <script type="text/javascript">
-            alert("{{ msg }}");
-        </script>
-        {% endif %}
     </body>
 </html>
