--- a/templates/register.html
+++ b/templates/register.html
@@ -10,12 +10,15 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-        }
+            margin: 0;
+            background: url('/static/login_bg.jpg') no-repeat center;
+            background-size: cover;
+        } 
         .container{
-            background-color: aqua;
+            background-color: rgba(55, 88, 88, 0.4);
             text-align: center;
             padding: 15px;
-            box-shadow: 10px 10px 20px black;
+            box-shadow: 10px 10px 20px rgba(0,0,0,0.5);
             width: 500px;
         }
         input{
@@ -23,17 +26,75 @@
             margin: 20px auto;
             padding: 10px;
             border-radius: 5px;
+            width: 70%;
+        }
+        input[type="text"]:hover{
+            border: 2px solid red;
+        }
+        input[type="password"]:hover{
+            border: 2px solid red;
         }
         input:focus{
             background-color: lightgreen;
         }
-
         input[type="submit"]{
             cursor: pointer;
             background-color: green;
             width: 100px;
+            transition: 0.2s;
+        }
+        #sub:disabled{
+            cursor: not-allowed;
+            background-color: gray;
+        }
+        #sub:hover{
+            transform: scale(1.1);
+            box-shadow: 0 4px 10px rgba(0,0,0,0.5);
+        }
+        #sub:active{
+            transform: scale(0.95);
+            background-color: #00ff00;
+        }
+        #msgs{
+            color: red;
         }
     </style>
+    <script>
+        function validatepwd(){
+                pwd=document.getElementById("pwd").value;
+                msgs=document.getElementById("msgs");
+                haslower=/[a-z]/.test(pwd);
+                hasupper=/[A-Z]/.test(pwd);
+                hasnum=/[0-9]/.test(pwd);
+                hassym=/[!@#$%^&*()<>?,.:{}|]/.test(pwd);
+                vallen=pwd.length>=6;
+                pwdval=haslower && hasupper && hasnum && hassym && vallen;
+                ihtml="";
+                if(!haslower){
+                    ihtml+=`<p class="invalid">At least 1 lowercase letter needed</p>`;
+                }
+                if(!hasupper){
+                    ihtml+=`<p class="invalid">At least 1 uppercase letter needed</p>`;
+                }
+                if(!hasnum){
+                    ihtml+=`<p class="invalid">At least 1 number needed</p>`;
+                }
+                if(!hassym){
+                    ihtml+=`<p class="invalid">At least 1 symbol needed</p>`;
+                }
+                if(!vallen){
+                    ihtml+=`<p class="invalid">At least 6 characters needed</p>`;
+                }
+                msgs.innerHTML=ihtml;
+                if(pwdval){
+                    msgs.innerHTML="";
+                    document.getElementById("sub").disabled=false;
+                }
+                else{
+                    document.getElementById("sub").disabled=true;
+                }
+        }
+    </script>
     </head>
     <body>
         <main> 
@@ -41,11 +102,12 @@
                 <form action="{{url_for('register')}}" method="POST">
                 <h2 style="font-size: 40px; text-shadow: 10px 10px 20px;">Zap into the Quiz Master</h2>
                 <input type="text" name="uname" id="uname" placeholder="Enter username" required>
-                <input type="password" name="pwd" id="pwd" placeholder="Enter password" required>
+                <input type="password" name="pwd" id="pwd" placeholder="Enter password" onkeyup="validatepwd()" required>
+                <div id="msgs"></div>
                 <input type="text" name="fname" id="fname" placeholder="Enter your full name" required>
                 <input type="text" name="qual" id="qual" placeholder="Enter qualification" required>
                 <input type="date" name="dob" id="dob" required>
-                <input type="submit" value="Submit">
+                <input type="submit" value="Submit" id="sub" disabled>
                 <a href="{{url_for('login')}}">Already one among here? prove it</a>
             </form>
             </div>
