--- a/templates/login.html
+++ b/templates/login.html
@@ -143,15 +143,7 @@
             </form>
             </div>
         </main>
-        <script>
-            document.getElementById('togglepwd').addEventListener('click',function(){
-                var pwd=document.getElementById('pwd');
-                type=pwd.type==='password'?'text':'password';
-                pwd.type=type;
-                this.textContent=type==='password'?'Show password':'Hide password';
-                this.style.backgroundColor=type==='password'?'green':'red';
-            })
-        </script>
+        <script src="/static/form.js"></script>
     </body>
 </html> 
 
