--- a/templates/register.html
+++ b/templates/register.html
@@ -6,33 +6,96 @@
     <title>Register</title>
     <style>
         body{
-            display: flex;
-            justify-content: center;
-            align-items: center;
             height: 100vh;
             margin: 0;
             background: url('/static/login_bg.jpg') no-repeat center;
             background-size: cover;
         } 
+        main{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            height: 100%;
+        }
         .container{
             background-color: rgba(55, 88, 88, 0.4);
             text-align: center;
-            padding: 15px;
+            padding: 20px;
+            border-radius: 20px;
             box-shadow: 10px 10px 20px rgba(0,0,0,0.5);
+            backdrop-filter: blur(10px);
             width: 500px;
+        }
+        .input-cont{
+            position: relative;
+            margin: 20px 0;
+            width: 100%;
+        }
+        label{
+            position: absolute;
+            top: 30%;
+            left: 80px;
+            transform: translateX(-50%);
+            color: rgb(235,24,24);
         }
         input{
             display: block;
-            margin: 20px auto;
-            padding: 10px;
-            border-radius: 5px;
-            width: 70%;
+            width: 80%;
+            margin: 40px auto 0px auto;
+            padding: 12px 15px;
+            border-radius: 25px;
+            border: none;
+            color: black;
         }
-        input[type="text"]:hover{
-            border: 2px solid red;
+        input::placeholder{
+            color: transparent;
         }
-        input[type="password"]:hover{
-            border: 2px solid red;
+        input:focus + label,
+        input:not(:placeholder-shown)+label{
+            top: -30px;
+            left: 50px;
+            font-size: 15px;
+            color: black;
+        }
+        input[type="submit"]{
+            margin: auto;
+            cursor: pointer;
+            font-size: large;
+            background-color: green;
+            width: 100px;
+            transition: 0.2s;
+        }
+
+        #sub:hover{
+            transform: scale(1.1);
+            box-shadow: 0 4px 10px rgba(0,0,0,0.5);
+        }
+        #sub:active{
+            transform: scale(0.95);
+            background-color: #00ff00;
+        }
+        #uname{
+            text-transform: lowercase;
+        }
+        #fname{
+            text-transform: capitalize;
+        }
+        a{
+            font-size: large;
+            display: block;
+            color: white;
+            text-decoration: none;
+            transition: all 0.3s ease-in-out;
+        }
+        a:hover{
+            transform: scale(1.05);
+            text-decoration: underline;
+        }
+        h1{
+            color: cyan;
+            text-shadow: 2px 2px 5px rgba(0, 255, 255, 0.7);
+            font-size: 50px;
         }
         input:focus{
             background-color: lightgreen;
@@ -57,6 +120,30 @@
         }
         #msgs{
             color: red;
+        }
+        button{
+            display: block;
+            margin:20px auto;
+            padding: 15px;
+            font-size: large;
+            border-radius: 30px;
+            border: none;
+            background-color: green;
+            transition: all 0.3s ease-in-out;
+        }
+        button:hover{
+            transform: scale(1.1);
+            box-shadow: 0 0 10px rgba(0,0,0,0.5);
+        }
+        .but{
+            display: flex;
+            justify-content: center;
+        }
+        @media (max-width: 480px) {
+            .container {
+                width: 80%;
+                padding: 20px;
+            }
         }
     </style>
     <script>
@@ -100,17 +187,36 @@
         <main> 
             <div class="container">
                 <form action="{{url_for('register')}}" method="POST">
-                <h2 style="font-size: 40px; text-shadow: 10px 10px 20px;">Zap into the Quiz Master</h2>
-                <input type="text" name="uname" id="uname" placeholder="Enter username" required>
-                <input type="password" name="pwd" id="pwd" placeholder="Enter password" onkeyup="validatepwd()" required>
+                <h1>Zap into the Quiz Master</h1>
+                <div class="input-cont">
+                    <input type="text" name="uname" id="uname" placeholder="" required>
+                    <label for="uname">Username</label>
+                </div>
+                <div class="input-cont">
+                    <input type="password" name="pwd" id="pwd" placeholder="" onkeyup="validatepwd()" required>
+                    <label for="uname">Password</label>
+                </div>
                 <div id="msgs"></div>
-                <input type="text" name="fname" id="fname" placeholder="Enter your full name" required>
-                <input type="text" name="qual" id="qual" placeholder="Enter qualification" required>
-                <input type="date" name="dob" id="dob" required>
-                <input type="submit" value="Submit" id="sub" disabled>
+                <div class="input-cont">
+                    <input type="text" name="fname" id="fname" placeholder="" required>
+                    <label for="uname">Full name</label>
+                </div>
+                <div class="input-cont">
+                    <input type="text" name="qual" id="qual" placeholder="" required>
+                    <label for="uname">Qualification</label>
+                </div>
+                <div class="input-cont">
+                    <input type="date" name="dob" id="dob" required>
+                    <label for="uname">DOB</label>
+                </div>
+                <div class="but">
+                    <button type="button" id="togglepwd">Show password</button>
+                    <input type="submit" value="Submit" id="sub" disabled>
+                </div>
                 <a href="{{url_for('login')}}">Already one among here? prove it</a>
             </form>
             </div>
         </main>
+        <script src="/static/form.js"></script>
     </body>
 </html>
