--- a/static/nav.css
+++ b/static/nav.css
@@ -1,3 +1,11 @@
+*{
+    font-family: 'Poppins', sans-serif;
+}
+body{
+    background: url('/static/login_bg.jpg') no-repeat center;
+    background-size: cover; 
+    height: 100vh;
+}
 nav{
     background-color: black;
     display: flex;
@@ -5,6 +13,17 @@ nav{
     padding: 20px;
     position: relative;
 }
+.navbar{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 20px;
+}
+.navbar a:hover{
+    background-color: rgb(50, 150, 220);
+    transform: scale(1.1);
+}
+
 a{
     color: white;
     text-decoration: none;
@@ -12,22 +31,38 @@ a{
 }
 .down{
     display: flex;
-    position:absolute ;
-    right: 20px;
+    justify-content: space-between;
+    gap: 2rem;
+    align-items: center;
+    position:relative;
 }
-button{
+.down input[type="search"]{
+    padding: 10px;
+    border-radius: 25px;
+}
+.down input[type="search"]:focus{
+    background-color: aqua;
+}
+.down2 button{
     padding: 10px 20px;
-    background-color: white;
+    font-weight: bold;
+    font-size: medium;
+    background-color: rgb(50, 150, 220);
     cursor: pointer;
 }
 .drop {
     display: none;
     top: 100%;
+    width: 90%;
     background-color: #ff55ff;
     position: absolute;
     right: 0;
+    z-index: 1;
 }
-.down:hover .drop {
+.down2{
+    position: relative;
+}
+.down2:hover .drop {
     display: block; 
 }
 .drop a{
@@ -37,4 +72,4 @@ button{
 
 .drop a:hover{
     background-color: #ff99ff;
-}
+} 
