--- a/templates/register.html
+++ b/templates/register.html
@@ -123,7 +123,7 @@
                     <label for="uname">Qualification</label>
                 </div>
                 <div class="input-cont">
-                    <input type="date" name="dob" id="dob" required>
+                    <input type="date" name="dob" id="dob" min="1930-01-01" max="2020-01-01" required>
                     <label for="uname">DOB</label>
                 </div>
                 <div class="but">
