--- a/templates/add_sub.html
+++ b/templates/add_sub.html
@@ -5,41 +5,30 @@
         <meta name="viewport" content="width=device-width;initial-scale=1.0">
         <title>Add Subject</title>
         <link rel="stylesheet" href="/static/nav.css">
-        <style>
-            main{
-                align-items: center;
-                margin-top: 100px;
-            }
-            legend{
-                text-align: center;
-            }
-        </style>
+        <link rel="stylesheet" href="/static/addeditany.css">
     </head>
     <body>
         <header>
             <nav>
                 <div class="navbar">
-                    <a href="#">Home</a>
-                    <a href="#">Quiz</a>
-                    <a href="#">Summary</a>
+                    <a href="{{url_for('admin_home')}}">Home</a>
+                    <a href="{{url_for('allusers')}}">Users</a>
+                    <a href="{{url_for('summary')}}">Summary</a>
                 </div>
                 <div class="down">
-                    <div>
-                        <input type="search" name="search" id="search" placeholder="Search for quizzes">
-                    </div>
                     <div class="down2">
                     <button>Welcome Admin</button>
-                </div>
                     <div class="drop">
                         <a href="#">Edit password</a>
                         <a href="{{url_for('logout')}}">Logout</a>
                     </div>
                 </div>
+            </div>
             </nav>
         </header>
         <main>
-            <fieldset>
-                <legend>Add Subject</legend>
+            <div>
+                <b><legend id="asub">Add Subject</legend></b>
                 <form action="{{url_for('add_sub')}}" method="POST">
                     <label for="sname">Subject Name:</label>
                     <input type="text" name="sname" id="sname" required>
@@ -50,7 +39,8 @@
                     <br>
                     <input type="submit" value="Submit">
                 </form>
-            </fieldset>
+            </div>
+            <a class="goback" style="color: black;" href="{{url_for('admin_home')}}">Go back</a>
         </main>
     </body>
 </html>
