--- a/templates/add_sub.html
+++ b/templates/add_sub.html
@@ -37,7 +37,7 @@
                     <br>
                     <textarea name="sdesc" id="sdesc" required></textarea>
                     <br>
-                    <input type="submit" value="Submit">
+                    <input type="submit" value="Add Subject">
                 </form>
             </div>
             <a class="goback" style="color: black;" href="{{url_for('admin_home')}}">Go back</a>
