Final CSS and js implemented

--- a/templates/view_quizzes.html
+++ b/templates/view_quizzes.html
@@ -5,38 +5,77 @@
         <meta name="viewport" content="width=device-width;initial-scale=1.0">
         <title>View Quizzes</title>
         <link rel="stylesheet" href="/static/nav.css">
+        <link rel="stylesheet" href="/static/addeditany.css">
         <style>
             main{
-                align-items: center;
-                margin-top: 100px;
+                max-width: 1100px;
+                margin:auto;
+                margin-top: 30px;
+                padding: 20px;
+                border-radius: 20px;
+                background-color: rgba(255, 255, 255, 0.4);
+                backdrop-filter: blur(10px);
             }
-            legend{
-                text-align: center;
-            }
-            table,th,td{
-                border: 2px solid blue;
+            #qtable{
+                margin-bottom: 20px;
                 border-collapse: collapse;
+                table-layout: fixed;
             }
-        </style>
+            .tbut{
+                display: flex;
+                justify-content: space-between;
+                gap: 5px;
+            }
+            a[href*='view_qsns']{
+                background-color: rgb(91, 176, 91);
+                border-radius: 20px;
+            }
+            a[href*='edit_quiz']{
+                background-color:chocolate ;
+                border-radius: 20px;
+            }
+            a[href*='del_quiz']{
+                background-color: red;
+                border-radius: 20px;
+            }
+            a[href*='view_qsns']:hover,a[href*='edit_quiz']:hover,a[href*='del_quiz']:hover{
+                transform: scale(1.1);
+            }
+            th,td{
+                padding: 10px;
+                background-color: white;
+                border: 1px solid black;
+            }
+            th{
+                background-color: violet;
+            }
+            @media(max-width:770px){
+                #qtable{
+                    display: block;
+                    width: 100%;
+                    overflow-x: auto;
+                }   
+            }
+        </style> 
     </head>
     <body>
         <header>
             <nav>
                 <div class="navbar">
-                    <a href="#">Home</a>
-                    <a href="#">Quiz</a>
-                    <a href="#">Summary</a>
+                    <a href="{{url_for('admin_home')}}">Home</a>
+                    <a href="{{url_for('allusers')}}">Users</a>
+                    <a href="{{url_for('summary')}}">Summary</a>
                 </div>
                 <div class="down">
                     <div>
-                        <input type="search" name="search" id="search" placeholder="Search for quizzes" onkeyup="filterq()">
+                        <input type="search" name="search" id="search" placeholder="Search for quizzes..." onkeyup="filterq()">
                     </div>
                     <div class="down2">
-                    <button>Welcome Admin</button>
-                </div>
-                    <div class="drop">
-                        <a href="#">Edit password</a>
-                        <a href="{{ url_for('logout') }}">Logout</a>
+                        <button>Welcome Admin</button>
+                        <div class="drop">
+                            <a href="#">Edit password</a>
+                            <a href="{{url_for('logout')}}">Logout</a>
+                        </div>
                     </div>
                 </div>
             </nav>
@@ -66,16 +105,16 @@
                     <td>{{quiz['date_of_quiz']}}</td>
                     <td>{{quiz['time_duration']}}</td>
                     <td>{{quiz['q_count']}}</td>
-                    <td><a style="color: black;" href="{{ url_for('view_qsns',quiz_id=quiz['id'],chapter_id=chapter_id) }}">View</a>
+                    <td class="tbut">
+                        <a style="color: black;" href="{{ url_for('view_qsns',quiz_id=quiz['id'],chapter_id=chapter_id) }}">View</a>
                         <a style="color: black;" href="{{ url_for('edit_quiz',quiz_id=quiz['id'],chapter_id=chapter_id) }}">Edit</a>
                         <a style="color: black;" href="{{ url_for('del_quiz',quiz_id=quiz['id'],chapter_id=chapter_id) }}" onclick="return confirm('Are you sure you want to delete the quiz?All the questions of it will also be deleted')">Delete</a>
                     </td>
-
                 </tr>
                 {% endfor %}
             </table>
-            <a style="color: black;" href="{{ url_for('add_quiz',chapter_id=chapter_id) }}">Add a quiz</a>
-            <a style="color: black;" href="{{ url_for('admin_home') }}">Go Back</a>
+            <a class="qadd" href="{{ url_for('add_quiz',chapter_id=chapter_id) }}">Add a quiz</a>
+            <a class="goback" href="{{ url_for('admin_home') }}">Go Back</a>
         </main>
         <script>
             function filterq(){
